<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity2">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents"
            app:contentScrim="@color/blue"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imgDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/img_nature"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/todo1" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAsli"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note3"
                android:textColor="@color/black_light"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_detail_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/note2"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="76dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_light" />

            <TextView
                android:id="@+id/txt_detail_text"
                android:textSize="15sp"
                android:lineSpacingExtra="6dp"
                android:ellipsize="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/note1"
                android:textColor="@color/black_light" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detail_open_wikipedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wikipedia_detail"
        app:layout_anchor="@id/appBarMain"
        app:layout_anchorGravity="bottom|end"
        app:useCompatPadding="true"
        android:contentDescription="@string/todo" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>